manifests/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: config-volume
          mountPath: /config
          subPath: docker-config/jellyfin/config
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
