manifests/jellyfin/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.cowlab.org`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: cowlab-production-tls
